--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@ body {
   overflow: hidden;
   background-color: #6fd480;
   font-family: 'Roboto', sans-serif;
-  background-image: url("/medias/images/femme.jpg");
+  background-image: url("../medias/images/femme.jpg");
   background-size: cover;
   background-position: center;
 }
