--- a/styles/style.scss
+++ b/styles/style.scss
@@ -18,7 +18,7 @@ body {
     background-color: $mainColor;
 
     font-family: 'Roboto', sans-serif;
-    background-image: url('/medias/images/femme.jpg');
+    background-image: url('../medias/images/femme.jpg');
     background-size: cover;
     background-position: center;
 }
